compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__definition__goto_type_definition_can_jump_to_all_types_in_a_function_type.snap
---
source: compiler-core/src/language_server/tests/definition.rs
expression: output
snapshot_kind: text
---
Jumping to type definition

----- Jumping from `src/app.gleam`

import wibble.{type Wibble}
import wobble.{type Wobble}
import box.{type Box}

pub fn main() {
  let a = fn(wibble: Wibble) { box.Box(wobble.Wobble) }
  ↑                                                    
}
